--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -7,6 +7,7 @@
 	text-align: center;
 	vertical-align: top;
 	width: 100%;
+	margin-bottom: 1rem;
 
 	.gallery-columns-2 & {
 		max-width: 50%;
@@ -38,6 +39,10 @@
 
 	.gallery-columns-9 & {
 		max-width: 11.11%;
+	}
+
+	img {
+		box-shadow: 0px 0px 5px rgba(0,0,0,0.7);
 	}
 }
 
