ajaxified. blog post version.

--- a/sass/elements/_modal.scss
+++ b/sass/elements/_modal.scss
@@ -47,7 +47,7 @@ body.article-view {
 			background: $text-white-secondary;
 		}
 		&:after {
-			content: url('img/gif/495.GIF');
+			content: url('img/gif/zen-spinner.GIF');
 			position:absolute;
 			top: 50%;
 			margin-top: -32px;
