--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -28,3 +28,8 @@ object {
 ## Galleries
 --------------------------------------------------------------*/
 @import "galleries";
+
+/*--------------------------------------------------------------
+## Code Blocks
+--------------------------------------------------------------*/
+@import "code-blocks";
