--- a/style.css
+++ b/style.css
@@ -996,7 +996,7 @@ a {
 
 .loading:before {
   content: '';
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -1004,7 +1004,7 @@ a {
   background: rgba(255, 255, 255, 0.7); }
 .loading:after {
   content: url("img/gif/zen-spinner.GIF");
-  position: absolute;
+  position: fixed;
   top: 50%;
   margin-top: -32px;
   left: 50%;
@@ -1243,18 +1243,24 @@ video#bgvid {
   background: no-repeat;
   background-size: cover; }
 
-.breakpoint-large .single #primary .type-post, .breakpoint-wide .single #primary .type-post, .breakpoint-large #modal #primary .type-post, .breakpoint-wide #modal #primary .type-post, .breakpoint-large .single #primary .type-project, .breakpoint-wide .single #primary .type-project, .breakpoint-large #modal #primary .type-project, .breakpoint-wide #modal #primary .type-project {
+.breakpoint-large .single #primary .type-post, .breakpoint-wide .single #primary .type-post, .breakpoint-large #modal #primary .type-post, .breakpoint-wide #modal #primary .type-post, .breakpoint-large body.error404 #primary .type-post, .breakpoint-wide body.error404 #primary .type-post, .breakpoint-large .single #primary .type-project, .breakpoint-wide .single #primary .type-project, .breakpoint-large #modal #primary .type-project, .breakpoint-wide #modal #primary .type-project, .breakpoint-large body.error404 #primary .type-project, .breakpoint-wide body.error404 #primary .type-project, .breakpoint-large .single #primary .type-attachment, .breakpoint-wide .single #primary .type-attachment, .breakpoint-large #modal #primary .type-attachment, .breakpoint-wide #modal #primary .type-attachment, .breakpoint-large body.error404 #primary .type-attachment, .breakpoint-wide body.error404 #primary .type-attachment, .breakpoint-large .single #primary section.error-404, .breakpoint-wide .single #primary section.error-404, .breakpoint-large #modal #primary section.error-404, .breakpoint-wide #modal #primary section.error-404, .breakpoint-large body.error404 #primary section.error-404, .breakpoint-wide body.error404 #primary section.error-404 {
   padding: 5rem; }
-.breakpoint-medium .single #primary .type-post, .breakpoint-medium #modal #primary .type-post, .breakpoint-medium .single #primary .type-project, .breakpoint-medium #modal #primary .type-project {
+.breakpoint-medium .single #primary .type-post, .breakpoint-medium #modal #primary .type-post, .breakpoint-medium body.error404 #primary .type-post, .breakpoint-medium .single #primary .type-project, .breakpoint-medium #modal #primary .type-project, .breakpoint-medium body.error404 #primary .type-project, .breakpoint-medium .single #primary .type-attachment, .breakpoint-medium #modal #primary .type-attachment, .breakpoint-medium body.error404 #primary .type-attachment, .breakpoint-medium .single #primary section.error-404, .breakpoint-medium #modal #primary section.error-404, .breakpoint-medium body.error404 #primary section.error-404 {
   padding: 2rem; }
-.breakpoint-small .single #primary .type-post, .breakpoint-small #modal #primary .type-post, .breakpoint-small .single #primary .type-project, .breakpoint-small #modal #primary .type-project {
+.breakpoint-small .single #primary .type-post, .breakpoint-small #modal #primary .type-post, .breakpoint-small body.error404 #primary .type-post, .breakpoint-small .single #primary .type-project, .breakpoint-small #modal #primary .type-project, .breakpoint-small body.error404 #primary .type-project, .breakpoint-small .single #primary .type-attachment, .breakpoint-small #modal #primary .type-attachment, .breakpoint-small body.error404 #primary .type-attachment, .breakpoint-small .single #primary section.error-404, .breakpoint-small #modal #primary section.error-404, .breakpoint-small body.error404 #primary section.error-404 {
   padding: 1rem; }
-.single #primary .type-post .wp-post-image, #modal #primary .type-post .wp-post-image, .single #primary .type-project .wp-post-image, #modal #primary .type-project .wp-post-image {
+.single #primary .type-post .wp-post-image, #modal #primary .type-post .wp-post-image, body.error404 #primary .type-post .wp-post-image, .single #primary .type-project .wp-post-image, #modal #primary .type-project .wp-post-image, body.error404 #primary .type-project .wp-post-image, .single #primary .type-attachment .wp-post-image, #modal #primary .type-attachment .wp-post-image, body.error404 #primary .type-attachment .wp-post-image, .single #primary section.error-404 .wp-post-image, #modal #primary section.error-404 .wp-post-image, body.error404 #primary section.error-404 .wp-post-image {
   max-width: 50%;
   float: left;
   margin: 0 1rem 1rem 0; }
-.single #primary .type-post .entry-content p, #modal #primary .type-post .entry-content p, .single #primary .type-project .entry-content p, #modal #primary .type-project .entry-content p {
+.single #primary .type-post .entry-content p, #modal #primary .type-post .entry-content p, body.error404 #primary .type-post .entry-content p, .single #primary .type-project .entry-content p, #modal #primary .type-project .entry-content p, body.error404 #primary .type-project .entry-content p, .single #primary .type-attachment .entry-content p, #modal #primary .type-attachment .entry-content p, body.error404 #primary .type-attachment .entry-content p, .single #primary section.error-404 .entry-content p, #modal #primary section.error-404 .entry-content p, body.error404 #primary section.error-404 .entry-content p {
   margin-top: 0; }
+
+#primary section.error-404 {
+  background: #FFFFFF;
+  content: "";
+  display: table;
+  table-layout: fixed; }
 
 .breakpoint-large .page #primary .type-page, .breakpoint-wide .page #primary .type-page {
   padding: 2rem 5rem; }
@@ -1318,6 +1324,9 @@ object {
 .entry-image a:hover, .entry-image a:focus, .entry-image a:active {
   border-bottom: 0; }
 
+#primary .type-attachment .entry-content img {
+  border: 1px solid rgba(0, 0, 0, 0.38); }
+
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
@@ -1366,7 +1375,7 @@ object {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7); }
 
 .gallery-caption {
-  display: block; }
+  display: none; }
 
 /*--------------------------------------------------------------
 ## Code Blocks
@@ -1401,14 +1410,14 @@ object {
 /*--------------------------------------------------------------
 ## Links
 --------------------------------------------------------------*/
-.project, .type-project {
+.project, .type-project, .type-attachment {
   background: #FFFFFF; }
-  .project header .entry-meta ul, .type-project header .entry-meta ul {
+  .project header .entry-meta ul, .type-project header .entry-meta ul, .type-attachment header .entry-meta ul {
     list-style: none;
     margin: 0;
     text-align: justify;
     padding-bottom: 0.2em; }
-    .project header .entry-meta ul li, .type-project header .entry-meta ul li {
+    .project header .entry-meta ul li, .type-project header .entry-meta ul li, .type-attachment header .entry-meta ul li {
       display: inline-block;
       font-size: 12.8px;
       font-size: 0.8rem;
@@ -1425,14 +1434,14 @@ object {
       -o-transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
       transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
       /* easeInOutSine */ }
-      .project header .entry-meta ul li:hover, .type-project header .entry-meta ul li:hover {
+      .project header .entry-meta ul li:hover, .type-project header .entry-meta ul li:hover, .type-attachment header .entry-meta ul li:hover {
         transform: scale(1.2);
         background: #E87B46; }
-      .project header .entry-meta ul li:active, .type-project header .entry-meta ul li:active {
+      .project header .entry-meta ul li:active, .type-project header .entry-meta ul li:active, .type-attachment header .entry-meta ul li:active {
         background: #E85813; }
-      .project header .entry-meta ul li a, .type-project header .entry-meta ul li a {
+      .project header .entry-meta ul li a, .type-project header .entry-meta ul li a, .type-attachment header .entry-meta ul li a {
         color: white; }
-        .project header .entry-meta ul li a:hover, .project header .entry-meta ul li a:focus, .project header .entry-meta ul li a:active, .type-project header .entry-meta ul li a:hover, .type-project header .entry-meta ul li a:focus, .type-project header .entry-meta ul li a:active {
+        .project header .entry-meta ul li a:hover, .project header .entry-meta ul li a:focus, .project header .entry-meta ul li a:active, .type-project header .entry-meta ul li a:hover, .type-project header .entry-meta ul li a:focus, .type-project header .entry-meta ul li a:active, .type-attachment header .entry-meta ul li a:hover, .type-attachment header .entry-meta ul li a:focus, .type-attachment header .entry-meta ul li a:active {
           color: white;
           border-bottom: 0; }
 
