--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,6 +58,12 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "vendor/prism";
 
 /*--------------------------------------------------------------
+# Font Awesome
+--------------------------------------------------------------*/
+@import "vendor/font-awesome/scss/font-awesome";
+
+
+/*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
 @import "normalize";
