lots of stuff. header is flex now, footer fonts and styles are updated, this is a big commit with bad documentation

--- a/sass/elements/_header.scss
+++ b/sass/elements/_header.scss
@@ -18,13 +18,14 @@
 	background-color: $primary;
 	z-index: 1000;
 	height: 160px;
-	text-align: center;
+	display:flex;
+	justify-content: center;
+	align-items: stretch;
 	.breakpoint-small & {
 		height: auto;
 		padding: 1rem;
 	}
 	.site-branding {
-		display: inline-block;
 		padding: 0.25rem 0;
 		.breakpoint-small & {
 			height: 140px;
