--- a/style.css
+++ b/style.css
@@ -2725,7 +2725,9 @@ table {
   background-color: #E87B46;
   z-index: 1000;
   height: 160px;
-  text-align: center; }
+  display: flex;
+  justify-content: center;
+  align-items: stretch; }
   .admin-bar #masthead {
     top: 32px; }
     @media screen and (min-width: 600px) and (max-width: 782px) {
@@ -2738,7 +2740,6 @@ table {
     height: auto;
     padding: 1rem; }
   #masthead .site-branding {
-    display: inline-block;
     padding: 0.25rem 0;
     height: 100%; }
     .breakpoint-small #masthead .site-branding {
@@ -2972,7 +2973,6 @@ a {
 --------------------------------------------------------------*/
 .main-navigation {
   height: 100%;
-  display: inline-block;
   margin-left: 3rem; }
   .breakpoint-medium .main-navigation .menu, .breakpoint-large .main-navigation .menu, .breakpoint-wide .main-navigation .menu {
     height: 100%; }
@@ -2983,20 +2983,22 @@ a {
         .breakpoint-medium .main-navigation .menu ul li a, .breakpoint-large .main-navigation .menu ul li a, .breakpoint-wide .main-navigation .menu ul li a {
           height: 100%; }
   .main-navigation ul {
-    display: block;
-    margin: 0; }
+    list-style: none;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between; }
     .main-navigation ul li {
-      display: table;
-      float: left;
+      display: flex;
+      align-content: stretch;
       letter-spacing: 1px; }
       .main-navigation ul li.current-menu-item {
         background: #E8A687; }
       .main-navigation ul li:hover {
         background: #E8A382; }
       .main-navigation ul li a {
+        display: flex;
+        align-items: center;
         color: white;
-        display: table-cell;
-        vertical-align: middle;
         padding: 0 1rem; }
         .main-navigation ul li a:hover, .main-navigation ul li a:focus, .main-navigation ul li a:active {
           border-bottom: 0; }
@@ -3305,7 +3307,18 @@ body {
 footer#colophon {
   margin: 1rem auto;
   color: rgba(255, 255, 255, 0.7);
-  text-shadow: 1px 1px 3px rgba(150, 150, 150, 0.7); }
+  text-shadow: 1px 1px 3px rgba(150, 150, 150, 0.7);
+  font-size: 1.2rem; }
+  footer#colophon #site-info {
+    float: left; }
+  footer#colophon #footer-social {
+    float: right; }
+    footer#colophon #footer-social .social-link {
+      margin-left: 1em; }
+      footer#colophon #footer-social .social-link:nth-of-type(1) {
+        margin-left: 0.2em; }
+  footer#colophon #footer-search {
+    clear: both; }
 
 video#bgvid {
   position: fixed;
@@ -3321,24 +3334,22 @@ video#bgvid {
   background: no-repeat;
   background-size: cover; }
 
-.breakpoint-large .single #primary .type-post, .breakpoint-wide .single #primary .type-post, .breakpoint-large #modal #primary .type-post, .breakpoint-wide #modal #primary .type-post, .breakpoint-large body.error404 #primary .type-post, .breakpoint-wide body.error404 #primary .type-post, .breakpoint-large .single #primary .type-project, .breakpoint-wide .single #primary .type-project, .breakpoint-large #modal #primary .type-project, .breakpoint-wide #modal #primary .type-project, .breakpoint-large body.error404 #primary .type-project, .breakpoint-wide body.error404 #primary .type-project, .breakpoint-large .single #primary .type-attachment, .breakpoint-wide .single #primary .type-attachment, .breakpoint-large #modal #primary .type-attachment, .breakpoint-wide #modal #primary .type-attachment, .breakpoint-large body.error404 #primary .type-attachment, .breakpoint-wide body.error404 #primary .type-attachment, .breakpoint-large .single #primary section.error-404, .breakpoint-wide .single #primary section.error-404, .breakpoint-large #modal #primary section.error-404, .breakpoint-wide #modal #primary section.error-404, .breakpoint-large body.error404 #primary section.error-404, .breakpoint-wide body.error404 #primary section.error-404 {
+.breakpoint-large .single #primary .type-post, .breakpoint-wide .single #primary .type-post, .breakpoint-large #modal #primary .type-post, .breakpoint-wide #modal #primary .type-post, .breakpoint-large .single #primary .type-project, .breakpoint-wide .single #primary .type-project, .breakpoint-large #modal #primary .type-project, .breakpoint-wide #modal #primary .type-project {
   padding: 5rem; }
-.breakpoint-medium .single #primary .type-post, .breakpoint-medium #modal #primary .type-post, .breakpoint-medium body.error404 #primary .type-post, .breakpoint-medium .single #primary .type-project, .breakpoint-medium #modal #primary .type-project, .breakpoint-medium body.error404 #primary .type-project, .breakpoint-medium .single #primary .type-attachment, .breakpoint-medium #modal #primary .type-attachment, .breakpoint-medium body.error404 #primary .type-attachment, .breakpoint-medium .single #primary section.error-404, .breakpoint-medium #modal #primary section.error-404, .breakpoint-medium body.error404 #primary section.error-404 {
+.breakpoint-medium .single #primary .type-post, .breakpoint-medium #modal #primary .type-post, .breakpoint-medium .single #primary .type-project, .breakpoint-medium #modal #primary .type-project {
   padding: 2rem; }
-.breakpoint-small .single #primary .type-post, .breakpoint-small #modal #primary .type-post, .breakpoint-small body.error404 #primary .type-post, .breakpoint-small .single #primary .type-project, .breakpoint-small #modal #primary .type-project, .breakpoint-small body.error404 #primary .type-project, .breakpoint-small .single #primary .type-attachment, .breakpoint-small #modal #primary .type-attachment, .breakpoint-small body.error404 #primary .type-attachment, .breakpoint-small .single #primary section.error-404, .breakpoint-small #modal #primary section.error-404, .breakpoint-small body.error404 #primary section.error-404 {
+.breakpoint-small .single #primary .type-post, .breakpoint-small #modal #primary .type-post, .breakpoint-small .single #primary .type-project, .breakpoint-small #modal #primary .type-project {
   padding: 1rem; }
-.single #primary .type-post .wp-post-image, #modal #primary .type-post .wp-post-image, body.error404 #primary .type-post .wp-post-image, .single #primary .type-project .wp-post-image, #modal #primary .type-project .wp-post-image, body.error404 #primary .type-project .wp-post-image, .single #primary .type-attachment .wp-post-image, #modal #primary .type-attachment .wp-post-image, body.error404 #primary .type-attachment .wp-post-image, .single #primary section.error-404 .wp-post-image, #modal #primary section.error-404 .wp-post-image, body.error404 #primary section.error-404 .wp-post-image {
+.single #primary .type-post .wp-post-image, #modal #primary .type-post .wp-post-image, .single #primary .type-project .wp-post-image, #modal #primary .type-project .wp-post-image {
   max-width: 50%;
   float: left;
   margin: 0 1rem 1rem 0; }
-.single #primary .type-post .entry-content p, #modal #primary .type-post .entry-content p, body.error404 #primary .type-post .entry-content p, .single #primary .type-project .entry-content p, #modal #primary .type-project .entry-content p, body.error404 #primary .type-project .entry-content p, .single #primary .type-attachment .entry-content p, #modal #primary .type-attachment .entry-content p, body.error404 #primary .type-attachment .entry-content p, .single #primary section.error-404 .entry-content p, #modal #primary section.error-404 .entry-content p, body.error404 #primary section.error-404 .entry-content p {
+  .breakpoint-small .single #primary .type-post .wp-post-image, .breakpoint-small #modal #primary .type-post .wp-post-image, .breakpoint-small .single #primary .type-project .wp-post-image, .breakpoint-small #modal #primary .type-project .wp-post-image {
+    float: none;
+    display: block;
+    max-width: 100%; }
+.single #primary .type-post .entry-content p, #modal #primary .type-post .entry-content p, .single #primary .type-project .entry-content p, #modal #primary .type-project .entry-content p {
   margin-top: 0; }
-
-#primary section.error-404 {
-  background: #FFFFFF;
-  content: "";
-  display: table;
-  table-layout: fixed; }
 
 .breakpoint-large .page #primary .type-page, .breakpoint-wide .page #primary .type-page {
   padding: 2rem 5rem; }
@@ -3368,6 +3379,15 @@ video#bgvid {
 
 .archive .page-title, .blog .page-title {
   color: white; }
+
+.search-results #primary {
+  background: #FFFFFF; }
+  .breakpoint-large .search-results #primary, .breakpoint-wide .search-results #primary {
+    padding: 5rem; }
+  .breakpoint-medium .search-results #primary {
+    padding: 2rem; }
+  .breakpoint-small .search-results #primary {
+    padding: 1rem; }
 
 /*--------------------------------------------------------------
 # Infinite scroll
@@ -3401,9 +3421,6 @@ object {
 
 .entry-image a:hover, .entry-image a:focus, .entry-image a:active {
   border-bottom: 0; }
-
-#primary .type-attachment .entry-content img {
-  border: 1px solid rgba(0, 0, 0, 0.38); }
 
 /*--------------------------------------------------------------
 ## Captions
@@ -3453,7 +3470,7 @@ object {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7); }
 
 .gallery-caption {
-  display: none; }
+  display: block; }
 
 /*--------------------------------------------------------------
 ## Code Blocks
