--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -64,6 +64,9 @@ footer#colophon {
     }
     #footer-social {
         float: right;
+        .breakpoint-small & {
+            float: none;
+        }
         .social-link {
             margin-left: 1em;
             &:nth-of-type(1) {
@@ -74,6 +77,8 @@ footer#colophon {
     #footer-search {
         clear: both;
     }
+    padding-bottom: 3em;
+
 }
 video#bgvid {
     position: fixed;
