--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: http://360zen.com
 Author: Justin Maurer
 Author URI: http://360zen.com/
 Description: Custom theme: Zen Theme Alpha developed by, Justin Maurer
-Version: 1.3.0
+Version: 1.3.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: zentheme
@@ -3308,11 +3308,14 @@ footer#colophon {
   margin: 1rem auto;
   color: rgba(255, 255, 255, 0.7);
   text-shadow: 1px 1px 3px rgba(150, 150, 150, 0.7);
-  font-size: 1.2rem; }
+  font-size: 1.2rem;
+  padding-bottom: 3em; }
   footer#colophon #site-info {
     float: left; }
   footer#colophon #footer-social {
     float: right; }
+    .breakpoint-small footer#colophon #footer-social {
+      float: none; }
     footer#colophon #footer-social .social-link {
       margin-left: 1em; }
       footer#colophon #footer-social .social-link:nth-of-type(1) {
