--- a/sass/elements/_header.scss
+++ b/sass/elements/_header.scss
@@ -1,7 +1,5 @@
+
 #masthead {
-	//height: 260px;
-	position: fixed;
-	top: 0;
 	@include shadow-site-header;
 	.admin-bar & {
 		top: 32px;
@@ -12,47 +10,125 @@
 			top: 0;
 		}
 	}
-	left: 0;
-	right: 0;
-	padding: 0 1rem;
-	background-color: $primary;
-	z-index: 1000;
-	height: 160px;
-	display:flex;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	background: $primary;
+	display: flex;
 	justify-content: center;
-	align-items: stretch;
+	z-index: 1000;
+	max-height: 160px;
+
+	-webkit-transition: max-height 400ms;
+	-moz-transition: max-height 400ms;
+	-ms-transition: max-height 400ms;
+	-o-transition: max-height 400ms;
+	transition: max-height 400ms;
 	.breakpoint-small & {
-		height: auto;
-		padding: 1rem;
+		display: block;
+		nav#site-navigation {
+			display: block;
+			background: $primary;
+			max-height: 0;
+			overflow: hidden;
+			margin-left: auto;
+			-webkit-transition: max-height 400ms;
+			-moz-transition: max-height 400ms;
+			-ms-transition: max-height 400ms;
+			-o-transition: max-height 400ms;
+			transition: max-height 400ms;
+		}
+		.menu {
+			display: block;
+		}
+		.site-branding {
+			text-align: center;
+		}
+		&.toggled {
+			max-height: 1000px;
+			nav#site-navigation {
+				//display: block;
+				//visibility: visible;
+				max-height: 1000px;
+			}
+		}
 	}
-	.site-branding {
-		padding: 0.25rem 0;
-		.breakpoint-small & {
-			height: 140px;
-			display: block;
-
+	&.small {
+		max-height: 60px;
+		img#masthead-logo {
+			height: 60px;
 		}
-		height: 100%;
-		//@include span(1 of 3);
+	}
 
-		.breakpoint-small & {
 
-			#masthead-logo {
-				//height: auto;
-				//width: 60%;
-				margin: 0 auto;
+	a {
+		&:hover, &:focus {
+			border-bottom: 0;
+			text-decoration: none;
+		}
+	}
+	img#masthead-logo {
+		height: 160px;
+		padding: 0.5em 0;
+		-webkit-transition: height 400ms;
+		-moz-transition: height 400ms;
+		-ms-transition: height 400ms;
+		-o-transition: height 400ms;
+		transition: height 400ms;
+	}
+	.menu {
+		display: flex;
+		align-items: stretch;
+	}
+	nav#site-navigation {
+		display: flex;
+		align-items: stretch;
+		margin-left: 3em;
+		.menu {
+			display: flex;
+			align-items: stretch;
+		}
+		ul {
+			list-style: none;
+			display: flex;
+			align-items: stretch;
+			margin: 0;
+			li {
+				display: flex;
+				letter-spacing: 1px;
+				&.current-menu-item {
+					background: $primary-light;
+				}
+				&:hover {
+					background: $primary-medium;
+				}
+				a {
+					color: $text-white-primary;
+					padding: 0 1rem;
+					display: flex;
+					align-items: center;
+					&:hover, &:focus, &:active {
+						border-bottom: 0;
+					}
+				}
 			}
 		}
+	}
 
-		#masthead-logo {
-			height: 100%;
+	.menu-toggle {
+		display: none;
+		.breakpoint-small & {
 			display: block;
-			margin: 0 auto;
-			max-width: none;
-
-			&.scrolled {
-				max-height: 100%;
-			}
 		}
+		position: absolute;
+		top: 0.4rem;
+		right: 1rem;
+		z-index: 1000;
+		background: transparent;
+		box-shadow: none;
+		padding: 0;
+		margin: 0;
+		@extend .fab-light;
+
 	}
 }
