--- a/sass/elements/_header.scss
+++ b/sass/elements/_header.scss
@@ -1,5 +1,6 @@
 
 #masthead {
+	-webkit-transform: translate3d(0, 0, 0);
 	@include shadow-site-header;
 	.admin-bar & {
 		top: 32px;
@@ -37,10 +38,11 @@
 			-ms-transition: max-height 400ms;
 			-o-transition: max-height 400ms;
 			transition: max-height 400ms;
+			.menu {
+				display: block;
+			}
 		}
-		.menu {
-			display: block;
-		}
+
 		.site-branding {
 			text-align: center;
 		}
@@ -60,7 +62,6 @@
 		}
 	}
 
-
 	a {
 		&:hover, &:focus {
 			border-bottom: 0;
@@ -76,7 +77,7 @@
 		-o-transition: height 400ms;
 		transition: height 400ms;
 	}
-	.menu {
+	nav#site-navigation .menu {
 		display: flex;
 		align-items: stretch;
 	}
