--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: http://360zen.com
 Author: Justin Maurer
 Author URI: http://360zen.com/
 Description: Custom theme: Zen Theme Alpha developed by, Justin Maurer
-Version: 1.3.5
+Version: 1.3.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: zentheme
@@ -2483,6 +2483,9 @@ h1 {
 h2 {
   font-weight: 300;
   margin-bottom: 0; }
+
+.breakpoint-small h1, .breakpoint-small h2, .breakpoint-small h3, .breakpoint-small h4, .breakpoint-small h5, .breakpoint-small h6 {
+  word-wrap: break-word; }
 
 p {
   margin-bottom: 1.5em; }
