--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -30,7 +30,7 @@
 		background: $text-white-secondary;
 	}
 	&:after {
-		content: url('img/gif/zen-spinner.GIF');
+		content: url('img/gif/zen-spinner.gif');
 		position: fixed;
 		top: 50%;
 		margin-top: -32px;
