--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: http://360zen.com
 Author: Justin Maurer
 Author URI: http://360zen.com/
 Description: Custom theme: Zen Theme Alpha developed by, Justin Maurer
-Version: 1.3.6
+Version: 1.3.
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: zentheme
@@ -3093,7 +3093,7 @@ a {
   bottom: 0;
   background: rgba(255, 255, 255, 0.7); }
 .loading:after {
-  content: url("img/gif/zen-spinner.GIF");
+  content: url("img/gif/zen-spinner.gif");
   position: fixed;
   top: 50%;
   margin-top: -32px;
