--- a/sass/navigation/_article-nav.scss
+++ b/sass/navigation/_article-nav.scss
@@ -19,6 +19,9 @@
 		@include span(1 of 2);
 		@include last;
 		text-align: right;
+		.breakpoint-small & {
+			clear: left;
+		}
 	}
 }
 .single #modal {
